--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="card">
         <div class="card__background"></div>
         <div class="avatar flex">
-            <img class="avatar__image" src="./images/image-victor.jpg">
+            <img class="avatar__image" src="./images/image-victor.jpg" alt="Person's face">
             <h1>Victor Crest <span>26</span></h1>
             <p>London</p>
         </div>
